--- a/composer.json
+++ b/composer.json
@@ -106,6 +106,7 @@
         "drupal/twig_tweak": "3.3.0",
         "drupal/views_bootstrap": "4.4",
         "drupal/webform": "^6.2",
+        "drupal/webp": "1.0-rc2",
         "drupaloverride/better_normalizers": "dev-master",
         "drush/drush": "12.5.1",
         "fontawesome/fontawesome": "6.1.0",
