--- a/web/profiles/provus/config/install/editor.editor.basic_html.yml
+++ b/web/profiles/provus/config/install/editor.editor.basic_html.yml
@@ -1,4 +1,3 @@
-langcode: en
 status: true
 dependencies:
   config:
@@ -17,16 +16,16 @@ settings:
       - bulletedList
       - numberedList
       - blockQuote
-      - drupalInsertImage
+      - drupalMedia
   plugins:
-    ckeditor5_imageResize:
-      allow_resize: true
     ckeditor5_list:
       reversed: true
       startIndex: true
     linkit_extension:
       linkit_enabled: true
       linkit_profile: default
+    media_media:
+      allow_view_mode_override: false
 image_upload:
   status: true
   scheme: public
