--- a/web/profiles/provus/config/install/editor.editor.full_html.yml
+++ b/web/profiles/provus/config/install/editor.editor.full_html.yml
@@ -23,7 +23,7 @@ settings:
       - numberedList
       - '|'
       - blockQuote
-      - drupalInsertImage
+      - drupalMedia
       - insertTable
       - codeBlock
       - horizontalLine
@@ -81,14 +81,14 @@ settings:
         - heading4
         - heading5
         - heading6
-    ckeditor5_imageResize:
-      allow_resize: true
     ckeditor5_list:
       reversed: true
       startIndex: true
     linkit_extension:
       linkit_enabled: true
       linkit_profile: default
+    media_media:
+      allow_view_mode_override: false
 image_upload:
   status: true
   scheme: public
