--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.media.image.media_library.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.media.image.media_library.yml
@@ -4,21 +4,21 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_image
-    - image.style.medium
     - media.type.image
+    - responsive_image.styles.provus_media_defaults
   module:
-    - image
+    - responsive_image
 id: media.image.media_library
 targetEntityType: media
 bundle: image
 mode: media_library
 content:
   thumbnail:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
+      responsive_image_style: provus_media_defaults
       image_link: ''
-      image_style: medium
       image_loading:
         attribute: lazy
     third_party_settings: {  }
@@ -28,4 +28,5 @@ hidden:
   created: true
   field_media_image: true
   name: true
+  search_api_excerpt: true
   uid: true
