--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.media.image.provus_card_background.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.media.image.provus_card_background.yml
@@ -2,21 +2,27 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.media.provus_card_background
     - field.field.media.image.field_media_image
     - media.type.image
-    - responsive_image.styles.provus_media_defaults
+    - responsive_image.styles.provus_card_background
   module:
+    - layout_builder
     - responsive_image
-id: media.image.default
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: media.image.provus_card_background
 targetEntityType: media
 bundle: image
-mode: default
+mode: provus_card_background
 content:
   thumbnail:
     type: responsive_image
     label: hidden
     settings:
-      responsive_image_style: provus_media_defaults
+      responsive_image_style: provus_card_background
       image_link: ''
       image_loading:
         attribute: lazy
