Resolve #3442592 "Banner responsive image"

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_desktop_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_desktop_1x.yml
@@ -7,6 +7,7 @@ name: provus_banner_desktop_1x
 label: 'Banner | Desktop | 1x'
 effects:
   a46bdcde-e3ab-4c62-9bdc-2e0f324925ac:
+    uuid: a46bdcde-e3ab-4c62-9bdc-2e0f324925ac
     id: focal_point_scale_and_crop
     weight: 1
     data:
