--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_desktop_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_desktop_2x.yml
@@ -7,6 +7,7 @@ name: provus_banner_desktop_2x
 label: 'Banner | Desktop | 2x'
 effects:
   8b81dab6-e0dd-4210-9eec-9c9ee26d921d:
+    uuid: 8b81dab6-e0dd-4210-9eec-9c9ee26d921d
     id: focal_point_scale_and_crop
     weight: 1
     data:
