--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_tablet_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_banner_tablet_1x.yml
@@ -7,6 +7,7 @@ name: provus_banner_tablet_1x
 label: 'Banner | Tablet | 1x'
 effects:
   21d8faa8-4864-47dd-9137-decaee0cb41e:
+    uuid: 21d8faa8-4864-47dd-9137-decaee0cb41e
     id: focal_point_scale_and_crop
     weight: 1
     data:
