--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background.yml
@@ -7,6 +7,7 @@ name: provus_card_background
 label: 'Card Background'
 effects:
   95a62830-e27a-4490-a703-b1231274449a:
+    uuid: 95a62830-e27a-4490-a703-b1231274449a
     id: focal_point_scale_and_crop
     weight: 1
     data:
