--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_mobile_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_mobile_1x.yml
@@ -7,6 +7,7 @@ name: provus_card_default_mobile_1x
 label: 'Card Default | Mobile | 1x'
 effects:
   720e7f4f-39cf-4106-928c-e20a99efe770:
+    uuid: 720e7f4f-39cf-4106-928c-e20a99efe770
     id: focal_point_scale_and_crop
     weight: 1
     data:
