--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_mobile_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_mobile_2x.yml
@@ -5,6 +5,7 @@ name: provus_media_defaults_mobile_2x
 label: 'Media Defaults | Mobile | 2x'
 effects:
   e816207c-870d-4eaf-b662-d1fea801c809:
+    uuid: e816207c-870d-4eaf-b662-d1fea801c809
     id: image_scale
     weight: 1
     data:
