--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_desktop_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_desktop_1x.yml
@@ -7,6 +7,7 @@ name: provus_card_background_desktop_1x
 label: 'Card Background | Desktop | 1x'
 effects:
   ab662f4c-fce5-4320-8711-558deb2bc0f5:
+    uuid: ab662f4c-fce5-4320-8711-558deb2bc0f5
     id: focal_point_scale_and_crop
     weight: 1
     data:
