--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_desktop_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_desktop_2x.yml
@@ -7,6 +7,7 @@ name: provus_card_background_desktop_2x
 label: 'Card Background | Desktop | 2x'
 effects:
   e3db5a8e-59d9-4315-8739-bc4a284a8092:
+    uuid: e3db5a8e-59d9-4315-8739-bc4a284a8092
     id: focal_point_scale_and_crop
     weight: 1
     data:
