--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_mobile_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_mobile_1x.yml
@@ -7,6 +7,7 @@ name: provus_card_background_mobile_1x
 label: 'Card Background | Mobile | 1x'
 effects:
   60046fc1-92af-4c0b-875e-93c3cf0d9667:
+    uuid: 60046fc1-92af-4c0b-875e-93c3cf0d9667
     id: focal_point_scale_and_crop
     weight: 1
     data:
