--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_mobile_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_background_mobile_2x.yml
@@ -7,6 +7,7 @@ name: provus_card_background_mobile_2x
 label: 'Card Background | Mobile | 2x'
 effects:
   dafad9c9-6f74-4e70-abdf-920b81105a76:
+    uuid: dafad9c9-6f74-4e70-abdf-920b81105a76
     id: focal_point_scale_and_crop
     weight: 1
     data:
