--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_mobile_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_mobile_2x.yml
@@ -7,6 +7,7 @@ name: provus_card_default_mobile_2x
 label: 'Card Default | Mobile | 2x'
 effects:
   75007e9f-4738-451d-9688-d17e5ea5bb4a:
+    uuid: 75007e9f-4738-451d-9688-d17e5ea5bb4a
     id: focal_point_scale_and_crop
     weight: 1
     data:
