--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_tablet_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_card_default_tablet_2x.yml
@@ -7,6 +7,7 @@ name: provus_card_default_tablet_2x
 label: 'Card Default | Tablet | 2x'
 effects:
   7e0959b3-7003-4bcc-b2d3-58fb53d14f0f:
+    uuid: 7e0959b3-7003-4bcc-b2d3-58fb53d14f0f
     id: focal_point_scale_and_crop
     weight: 1
     data:
