--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_desktop_1x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_desktop_1x.yml
@@ -5,6 +5,7 @@ name: provus_media_defaults_desktop_1x
 label: 'Media Defaults | Desktop | 1x'
 effects:
   dae0ee10-3161-4fe1-85ed-6a7ff4e83fe9:
+    uuid: dae0ee10-3161-4fe1-85ed-6a7ff4e83fe9
     id: image_scale
     weight: 2
     data:
