--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_desktop_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_desktop_2x.yml
@@ -5,6 +5,7 @@ name: provus_media_defaults_desktop_2x
 label: 'Media Defaults | Desktop | 2x'
 effects:
   f27682ad-a945-4e62-895d-14bff613f934:
+    uuid: f27682ad-a945-4e62-895d-14bff613f934
     id: image_scale
     weight: 1
     data:
