--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_tablet_2x.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_media_defaults_tablet_2x.yml
@@ -5,6 +5,7 @@ name: provus_media_defaults_tablet_2x
 label: 'Media Defaults | Tablet | 2x'
 effects:
   28725757-b182-4f91-803e-d602ab655e35:
+    uuid: 28725757-b182-4f91-803e-d602ab655e35
     id: image_scale
     weight: 1
     data:
