3444511: Override gin lb toolbar to add the Secondary toolbar from gin. Adjust...

--- a/web/profiles/provus/config/install/user.role.content_approver.yml
+++ b/web/profiles/provus/config/install/user.role.content_approver.yml
@@ -16,6 +16,7 @@ weight: 4
 is_admin: null
 permissions:
   - 'access content overview'
+  - 'access toolbar'
   - 'access tour'
   - 'administer media'
   - 'administer nodes'
